# chess-ai

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  brainstorm.md  build.ps1  conftest.py  pyproject.toml  run_bot.ps1  train.py
docs/: architecture.md  changelog.md  cpp-optimizations.md  how-alphazero-engines-work.md  lc0-optimizations.md
docs/superpowers/plans/: 2026-04-11-chess-engine-core.md  2026-04-11-mcts-search.md  2026-04-11-neural-network-training.md  2026-04-11-selfplay-pipeline.md
scripts/: build_opening_book.py  convert_npz_to_bitboards.py  count_shards.py  download_syzygy.sh  eval_vs_stockfish.py  phase_b_parallel.py
src/: main.cpp
src/core/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  move_parser.h  movegen.cpp  movegen.h  position.cpp  position.h  types.h
src/mcts/: game_manager.cpp  game_manager.h  nn_cache.h  node.cpp  node.h  search.cpp  search.h
src/neural/: encoder.cpp  encoder.h  neural_evaluator.cpp  neural_evaluator.h  policy_map.cpp  policy_map.h  position_history.cpp  position_history.h  trt_evaluator.cpp  trt_evaluator.h
src/python/: bindings.cpp
src/python/chess_mcts/: __init__.py  _paths.py.in
src/syzygy/: syzygy.cpp  syzygy.h
src/uci/: responder.h  safety_filter.cpp  safety_filter.h  stdout_responder.cpp  stdout_responder.h  time_manager.h  uci.cpp  uci.h
tests/: generate_test_data.py  test_attacks.cpp  test_bitboard.cpp  test_game_manager.cpp  test_mcts.cpp  test_movegen.cpp  test_neural.cpp  test_perft.cpp  test_position.cpp  test_syzygy.cpp  test_types.cpp  test_uci.cpp
training/: __init__.py  __main__.py  build_trt_engine.py  config.py  dataset.py  discard_pool.py  encoder.py  export.py  generate_data.py  mcts.py  metrics.py  model.py  pretrain.py  pretrain_chesscom.py  pretrain_dataset.py  records.py  resign_calibrator.py  selfplay.py  selfplay_loop.py  stockfish_label.py  test_training.py  train.py
visualization/: server.py
visualization/static/: index.html  play.html
